--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
   
           <div class="section__person-data">
             <form class="section__person-form" method="POST">
-              
+              <span id="hidden__id"></span>
               <div class="section__person-form-wrapper">
                 <label class="section__person-form-title" for="city">Номер телефона</label>
                 <input class="section__person-form-input section__input" type="text" placeholder="Номер телефона" id="section__person-form-phone" name="phone_number" required>
