--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,6 +68,7 @@ body{
   min-height: 100vh;
   background-color: #501514;
 }
+
 .section{
   flex-grow: 1;
 }
@@ -98,6 +99,7 @@ body{
   justify-content: center;
   padding-top: 20px;
 }
+
 .section__person-list{
   width: 30%;
   border: 1px solid #ffffff50;
@@ -115,6 +117,18 @@ body{
   border: 1px solid #ffffff50;
   border-radius: 5px;
   padding: 30px 20px;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.section__person-data.visible{
+  opacity: 1;
+  visibility: visible;
+}
+
+#hidden__id{
+  visibility: hidden;
+  opacity: 0;
 }
 
 .section__input{
