--- a/templates/index.html
+++ b/templates/index.html
@@ -1,70 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='./css/style.css') }}">
-</head>
-<body>
-  
-  <section class="section__search">
+{% extends 'base.html' %}
+
+{% block content %}
+<section class="section__search">
+  <div class="container">
+    <form class="section__search-wrapper">
+      <div class="section__search-form">
+        <input class="section__search-input section__input" type="text" placeholder="Введите данные для поиска" id="section__search-input" name="section__search-input">
+        <button class="section__search-button section__button" type="submit">Найти контакт</button>
+      </div>
+    </form>
+  </div>
+</section>
+
+<div class="wrapper">
+  <section class="section">
     <div class="container">
-      <form class="section__search-wrapper">
-        <div class="section__search-form">
-          <input class="section__search-input section__input" type="text" placeholder="Введите данные для поиска" id="section__search-input" name="section__search-input">
-          <button class="section__search-button section__button" type="submit">Найти контакт</button>
+
+      <div class="section__wrapper">
+        <div class="section__person-list">
+          <a class="section__person-add-button section__button" href="{{ url_for('add_contact') }}">Добавить новую запись</a>
+          <h3 class="section__person-title">Список контактов</h3>
+          <ul class="section__person-items">
+            
+          </ul>
         </div>
-      </form>
+
+        <div class="section__person-data">
+          <form class="section__person-form" method="POST">
+            <span id="hidden__id"></span>
+            <div class="section__person-form-wrapper">
+              <label class="section__person-form-title" for="city">Номер телефона</label>
+              <input class="section__person-form-input section__input" type="text" placeholder="Номер телефона" id="section__person-form-phone" name="phone_number" required>
+            </div>
+  
+            <div class="section__person-form-wrapper">
+              <label class="section__person-form-title" for="firstName">Имя</label>
+              <input class="section__person-form-input section__input" type="text" placeholder="Имя" id="section__person-form-firstName" name="first_name" required>
+            </div>
+      
+            <div class="section__person-form-wrapper">
+              <label class="section__person-form-title" for="lastName">Фамилия</label>
+              <input class="section__person-form-input section__input" type="text" placeholder="Фамилия" id="section__person-form-lastName" name="last_name" required>
+            </div>
+            <a class="section__person-form-button section__button" href="{{ url_for('index') }}">Сохранить изменения</a>
+            <a class="section__person-delete-button section__button" href="{{ url_for('index') }}">Удалить запись</a>
+    
+          </form>
+        </div>
+      </div>
     </div>
   </section>
-  <div class="wrapper">
-    <section class="section">
-      <div class="container">
-  
-        <div class="section__wrapper">
-          <div class="section__person-list">
-            <a class="section__person-add-button section__button" href="{{ url_for('add_contact') }}">Добавить новую запись</a>
-            <h3 class="section__person-title">Список контактов</h3>
-            <ul class="section__person-items">
-              
-            </ul>
-          </div>
-  
-          <div class="section__person-data">
-            <form class="section__person-form" method="POST">
-              <span id="hidden__id"></span>
-              <div class="section__person-form-wrapper">
-                <label class="section__person-form-title" for="city">Номер телефона</label>
-                <input class="section__person-form-input section__input" type="text" placeholder="Номер телефона" id="section__person-form-phone" name="phone_number" required>
-              </div>
-    
-              <div class="section__person-form-wrapper">
-                <label class="section__person-form-title" for="firstName">Имя</label>
-                <input class="section__person-form-input section__input" type="text" placeholder="Имя" id="section__person-form-firstName" name="first_name" required>
-              </div>
-        
-              <div class="section__person-form-wrapper">
-                <label class="section__person-form-title" for="lastName">Фамилия</label>
-                <input class="section__person-form-input section__input" type="text" placeholder="Фамилия" id="section__person-form-lastName" name="last_name" required>
-              </div>
-              <button class="section__person-form-button section__button" type="submit">Сохранить изменения</button>
-              <a class="section__person-delete-button section__button" href="#">Удалить запись</a>
-      
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <footer class="footer">
-      <div class="container">
-        <p class="footer__copyright">Copyright © 2023 Andrei Makarevich. All rights reserved</p>
-      </div>
-    </footer>
-    
-  </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="{{ url_for('static', filename='./js/main.js') }}"></script>
-</body>
-</html>
+  <footer class="footer">
+    <div class="container">
+      <p class="footer__copyright">Copyright © 2023 Andrei Makarevich. All rights reserved</p>
+    </div>
+  </footer>
+  
+</div>
+{% endblock %}
+
+{% block script %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="{{ url_for('static', filename='./js/main.js') }}"></script>
+{% endblock %}
