--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,12 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='./css/style.css') }}">
 </head>
 <body>
-  {% block content %}
+  {% block search %}
   {% endblock %}
-  
+  <div class="wrapper">
+    {% block content %}
+    {% endblock %}
+  </div>
   {% block script %}
   {% endblock %}
 </body>
