Осталось доделать немного стилей

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,8 @@
         <a class="section__person-add-button section__button" href="{{ url_for('add_contact') }}">Добавить новую запись</a>
         <h3 class="section__person-title">Список контактов</h3>
         <ul class="section__person-items">
-          
         </ul>
+        <a class="section__person-add-button section__button" href="{{ url_for('index') }}">Вернуться к списку контактов</a>
       </div>
 
       <div class="section__person-data">
