--- a/static/css/style.css
+++ b/static/css/style.css
@@ -165,6 +165,7 @@ body{
   transition: all 0.4s ease-in-out;
   display: inline-block;
   text-align: center;
+  cursor: pointer;
 }
 
 .section__button:hover{
@@ -249,4 +250,17 @@ body{
 .content__text{
   font-size: 40px;
   line-height: 1.4;
+}
+
+.section__person-return-button{
+  margin-top: 20px;
+  opacity: 0;
+  visibility: hidden;
+  display: none;
+}
+
+.section__person-return-button.visible{
+  opacity: 1;
+  visibility: visible;
+  display: block;
 }
