--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,26 @@
         <input class="section__search-input section__input" type="text" placeholder="Введите данные для поиска" id="section__search-input" name="section__search-input">
         <button class="section__search-button section__button" id="section__search-button" type="submit">Найти контакт</button>
       </div>
+      <h3 class="section__radio-title">Критерии поиска:</h3>
+      <div class="section__radio-wrapper">
+
+        <div class="section__radio-item">
+          <input type="radio" class="check2" name="search" checked>
+          <label class="section__radio-label">По номеру телефона</label>
+        </div>
+
+        <div class="section__radio-item">
+          <input type="radio" class="check2" name="search">
+          <label class="section__radio-label">По имени</label>
+        </div>
+
+        <div class="section__radio-item">
+          <input type="radio" class="check2" name="search">
+          <label class="section__radio-label">По фамилии</label>
+        </div>
+          
+      </div>
+        
     </form>
   </div>
 </section>
