--- a/templates/index.html
+++ b/templates/index.html
@@ -12,17 +12,17 @@
       <div class="section__radio-wrapper">
 
         <div class="section__radio-item">
-          <input type="radio" class="check2" name="search" checked>
+          <input type="radio" class="section__radio-button" name="search" value="phone_number" checked>
           <label class="section__radio-label">По номеру телефона</label>
         </div>
 
         <div class="section__radio-item">
-          <input type="radio" class="check2" name="search">
+          <input type="radio" class="section__radio-button" name="search" value="firstname">
           <label class="section__radio-label">По имени</label>
         </div>
 
         <div class="section__radio-item">
-          <input type="radio" class="check2" name="search">
+          <input type="radio" class="section__radio-button" name="search" value="lastname">
           <label class="section__radio-label">По фамилии</label>
         </div>
           
